--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,11 @@
         class="w-full h-96 p-5 mb-5 md:mt-28 md:mb-16 flex justify-end md:justify-start items-center flex-col md:flex-row gap-4 md:gap-16 bg-mobile"
       >
         <img
-          src="../assets/img/office15189548.webp"
+          src="https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/officewhite-aOmwOMZWaMsgwWtTnRTZS5cZTmg0wI.webp"
           alt="imagen de gente en una reunión"
           class="hidden md:block w-2/4 h-auto rounded-md"
         />
-        <div class="w-1/2">
+        <div class="w-full md:w-1/2">
           <div class="mb-5">
             <h1 class="text-white font-bold text-4xl md:text-6xl mb-2 md:mb-10">
               We are Digitalizers
@@ -136,31 +136,31 @@
         </div>
         <div class="grid gap-4 grid-cols-2 lg:grid-cols-4">
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('../../assets/img/seo.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/seo-bN8j13WL48iSQzc0vMAN3J6lPXIBxH.webp')] bg-cover bg-center"
           >
-            <p class="text-white font-semibold mb-1 md:text-lg">SEO</p>
-            <p class="text-white text-sm md:text-lg font-thin md:font-bold">Drive quality traffic to your website</p>
+            <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">SEO</p>
+            <p class="text-white text-sm md:text-lg font-thin md:font-medium">Drive quality traffic to your website</p>
           </div>
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('../../assets/img/pcc.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/pcc-UkfEeYXNvCgkeg05eVRsUYV7yuNKCN.webp')] bg-cover bg-center"
           >
-            <p class="text-white font-semibold mb-1 md:text-lg">PCC</p>
-            <p class="text-white text-sm md:text-lg font-thin md:font-bold">Increase your sales and leads</p>
+            <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">PCC</p>
+            <p class="text-white text-sm md:text-lg font-thin md:font-medium">Increase your sales and leads</p>
           </div>
 
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('../../assets/img/social_media.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/social_media-CerVdnqpRTpgvQdbQkmMxpQ5V34qPo.webp')] bg-cover bg-center"
           >
-            <p class="text-white font-semibold mb-1 md:text-lg">Social Media</p>
-            <p class="text-white text-sm md:text-lg font-thin md:font-bold">
+            <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">Social Media</p>
+            <p class="text-white text-sm md:text-lg font-thin md:font-medium">
               Build brand awareness and customer engagement
             </p>
           </div>
           <div
-            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('../../assets/img/dev.webp')] bg-cover bg-center"
+            class="h-40 p-2 bg-slate-700 border-solid border-2 border-slate-500 rounded-md bg-[url('https://c1prowbmhyo8n8ks.public.blob.vercel-storage.com/landing/dev-V7WPoUoxpfv2DB520O6YaA3rkphhPb.webp')] bg-cover bg-center"
           >
-            <p class="text-white font-semibold mb-1 md:text-lg">Web Development</p>
-            <p class="text-white text-sm md:text-lg font-thin md:font-bold">Build interactive and modern webs.</p>
+            <p class="text-white font-semibold mb-1 md:text-2xl md:font-bold">Web Development</p>
+            <p class="text-white text-sm md:text-lg font-thin md:font-medium">Build interactive and modern webs.</p>
           </div>
         </div>
       </section>
