--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="At Digitaliz, we are passionate about digital transformation. With a commitment to
+      content="At DigitalizMK we are passionate about digital transformation. With a commitment to
     innovation and cutting-edge technology, we specialize in helping businesses thrive in
     the digital age."
     />
@@ -23,12 +23,12 @@
     />
     <link rel="stylesheet" href="./build/style.css" />
     <link rel="stylesheet" href="../src/style.css" />
-    <title>Digitaliz - Make your business grow</title>
+    <title>DigitalizMK - Make your business grow</title>
   </head>
   <body class="bg-primary">
     <!-- NAVBAR -->
     <nav class="w-full flex justify-between p-5 md:px-32 bg-slate-900 shadow-md fixed top-0 z-10">
-      <a href="#" class="text-white text-lg z-10 font-semibold">Digitaliz</a>
+      <a href="#" class="text-white text-lg z-10 font-semibold">DigitalizMK</a>
       <div class="lg:hidden flex items-center justify-between z-10">
         <div>
           <button id="botonMenu" class="text-white focus:outline-none">
@@ -107,7 +107,7 @@
             <div class="w-full h-1 border-b bg-primary hidden md:block"></div>
           </div>
           <p class="text-secondary md:text-lg">
-            At <strong class="text-blue-500">Digitaliz</strong>, we are passionate about digital
+            At <strong class="text-blue-500">DigitalizMK</strong>, we are passionate about digital
             transformation. With a commitment to innovation and cutting-edge technology, we
             specialize in helping businesses thrive in the digital age. Our team of experts brings
             together a wealth of experience in software development, digital marketing, and IT
@@ -189,7 +189,7 @@
           Unlock Your Business Potential with Our Digital Marketing Solutions In today's fast-paced
           digital landscape, staying ahead of the competition requires more than just a strong
           online presence – it demands strategic digital marketing expertise. At
-          <strong class="text-blue-500">Digitaliz</strong>, we specialize in helping businesses
+          <strong class="text-blue-500">DigitalizMK</strong>, we specialize in helping businesses
           thrive in the digital age by providing comprehensive digital marketing solutions tailored
           to your unique needs and goals. Why choose us? Here are just a few reasons:
         </p>
@@ -311,7 +311,7 @@
         </div>
         <p class="text-secondary mt-15 md:text-lg md:mt-8">
           Don't let your business get left behind in the digital age. Partner with
-          <strong class="text-blue-500">Digitaliz</strong>
+          <strong class="text-blue-500">DigitalizMK</strong>
           and take your digital marketing efforts to the next level. Contact us today to learn more
           about our services and how we can help your business succeed online.
         </p>
@@ -383,7 +383,7 @@
       >
         <div class="flex gap-2 mb-5">
           <h3 class="text-slate-400">Contact:</h3>
-          <a class="text-slate-400" href="#">digi.contact@digitaliz.com</a>
+          <a class="text-slate-400" href="#">digi.contact@digitalizmk.com</a>
         </div>
         <div class="flex gap-5 mb-5">
           <a href="#" target="_blank" title="enlace a instagra" class="text-slate-400 text-2xl"
@@ -397,7 +397,7 @@
           ></a>
         </div>
         <div class="">
-          <p class="text-slate-500 text-sm">&copy; 2024 Digitaliz. All rights reserved.</p>
+          <p class="text-slate-500 text-sm">&copy; 2024 DigitalizMk. All rights reserved.</p>
         </div>
       </div>
     </footer>
