--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <body class="bg-primary">
     <!-- NAVBAR -->
     <nav class="fixed top-0 left-0 w-full bg-gray-900 text-white">
-      <div class="container mx-auto flex justify-between items-center px-4 py-3 md:py-5">
+      <div class="container mx-auto flex justify-between lg:items-center px-4 py-3 md:py-5">
         <a href="#" class="text-white text-lg md:text-4xl z-10 font-semibold">DigitalizMK</a>
         <div class="lg:hidden flex items-center justify-between z-10">
           <div>
